kubernetes/argocd/apps/workloads/dnd-player-site/manifests/public-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-player-site-public
  namespace: dnd-player-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "dnd.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: dnd-player-site
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dnd.paulynomial.com
      secretName: dnd-paulynomial-com-tls
